[metadata]
name = munch
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License
summary = A dot-accessible dictionary (a la JavaScript objects)
description-file =
    README.md
description-content-type = text/markdown
license = MIT
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/Infinidat/munch

[extras]
testing =
    astroid~=1.5.3; python_version=='2.7'
    astroid>=2.0; python_version >= '3.4'
    pylint~=1.7.2; python_version=='2.7'
    pylint~=2.3.1; python_version >= '3.4'
    pytest
    coverage
yaml =
    PyYAML>=5.1.0


[tool:pytest]
testpaths = tests

[bdist_wheel]
universal=1
